--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -73,12 +73,13 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VisualizeAdaptiveDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,FoliageOcclusionBounds=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,AtmosphericFog=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HighResScreenshotMask=0,HMDDistortion=1,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,VisualizeBloom=0,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,MediaPlanes=1",GameShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VisualizeAdaptiveDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,FoliageOcclusionBounds=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,AtmosphericFog=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HighResScreenshotMask=0,HMDDistortion=1,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,VisualizeBloom=0,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,MediaPlanes=1",BufferVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowFPS=False,bShowOnScreenStats=False,EnabledStats=,bShowFullToolbar=True))
 CurrentScalingGridSize=6
 CurrentRotGridSize=6
-CameraSpeed=2
+GridEnabled=False
+CurrentPosGridSize=4
 
 [MRU]
-MRUItem0=/Game/_Scenes/Bowling
-MRUItem1=/Game/_Scenes/VR_Menu
-MRUItem2=/Game/_Scenes/Maze
+MRUItem0=/Game/_Scenes/Maze
+MRUItem1=/Game/_Scenes/Bowling
+MRUItem2=/Game/_Scenes/VR_Menu
 MRUItem3=/Game/_Scenes/IntroScene
 MRUItem4=/Game/_Scenes/KnifeThrow
 MRUItem5=/Game/_Scenes/HeartBall
@@ -92,7 +93,7 @@ OnlyBuildVisibility=False
 UseErrorColoring=True
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/FBX_Models/Maze/WhiskeyBottle
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -118,7 +119,7 @@ GlobalAssetPicker.ThumbnailSizeScale=0.100000
 GlobalAssetPicker.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/_Scenes/Bowling
+LastLevel=/Game/_Scenes/Maze
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -146,7 +147,7 @@ BP_PickupCube_C.Cooking=True
 BP_PickupCube_C.Input=True
 BP_PickupCube_C.Actor=True
 StaticMeshActor.TransformCommon=True
-StaticMeshActor.StaticMesh=False
+StaticMeshActor.StaticMesh=True
 StaticMeshActor.Materials=True
 StaticMeshActor.Physics=True
 StaticMeshActor.Collision=True
@@ -2003,6 +2004,47 @@ REINST_BP_AngryBall_C_100.Tags=True
 REINST_BP_AngryBall_C_100.ComponentReplication=True
 REINST_BP_AngryBall_C_100.Cooking=True
 REINST_BP_AngryBall_C_100.Events=True
+BP_BallSpawner_C.Tick=True
+BP_BallSpawner_C.Rendering=True
+BP_BallSpawner_C.Replication=True
+BP_BallSpawner_C.Input=True
+BP_BallSpawner_C.Actor=True
+BP_BallSpawner_C.TransformCommon=True
+BP_Menu_RandomSpawnerVolume_C.Tick=True
+BP_Menu_RandomSpawnerVolume_C.Default=True
+BP_Menu_RandomSpawnerVolume_C.Rendering=True
+BP_Menu_RandomSpawnerVolume_C.Replication=True
+BP_Menu_RandomSpawnerVolume_C.Input=True
+BP_Menu_RandomSpawnerVolume_C.Actor=True
+BP_Menu_RandomSpawnerVolume_Bottles_C.TransformCommon=True
+BP_Menu_RandomSpawnerVolume_Bottles_C.Default=True
+BP_Menu_RandomSpawnerVolume_Bottles_C.Rendering=True
+BP_Menu_RandomSpawnerVolume_Bottles_C.Input=True
+BP_Menu_RandomSpawnerVolume_Bottles_C.Actor=True
+BP__BottlesRandomSpawner_C.TransformCommon=True
+BP__BottlesRandomSpawner_C.Default=True
+BP__BottlesRandomSpawner_C.Rendering=True
+BP__BottlesRandomSpawner_C.Input=True
+BP__BottlesRandomSpawner_C.Actor=True
+BP__BottlesRandomSpawner_C.Tick=True
+BP__BottlesRandomSpawner_C.Replication=True
+BP_WhiskeybottleV1_C.Tick=True
+BP_WhiskeybottleV1_C.Actor=True
+BP_WhiskeybottleV1_C.Rendering=True
+BP_WhiskeybottleV1_C.Replication=True
+BP_WhiskeybottleV1_C.Input=True
+BP_WhiskeybottleV1_C.TransformCommon=True
+BP_WhiskeybottleV1_C.StaticMesh=True
+BP_WhiskeybottleV1_C.Materials=True
+BP_WhiskeybottleV1_C.Physics=True
+BP_WhiskeybottleV1_C.Collision=True
+BP_WhiskeybottleV1_C.Lighting=True
+BP_WhiskeybottleV1_C.Tags=True
+BP_WhiskeybottleV1_C.Cooking=True
+BP_WhiskeybottleV1_C.Variable=True
+BP_WhiskeybottleV1_C.Sockets=True
+BP_WhiskeybottleV1_C.ComponentReplication=True
+BP_WhiskeybottleV1_C.Events=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2011,7 +2053,7 @@ Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.ColorSaturationShadows\" \"Object.PostProcessVolumeSettings.Settings.FilmWhitePoint\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object=
+Object="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[3]\" \"Object.ImportSettings.AssetImportData\" \"Object.ImportSettings.AssetImportData.Object.File Path\" "
 MaterialExpressionSceneColor="\"Object.ConstInput\" "
 MaterialExpression=
 WorldSettings="\"Object.Lightmass.LightmassSettings\" "
@@ -2020,15 +2062,15 @@ CableComponent="\"Object.Cable.AttachEndTo\" \"Object.Cable.EndLocation\" "
 MeshComponent=
 PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
-ActorComponent=
+ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 KillZVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PhysicsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.ImportSettings.AssetImportData\" \"Object.ImportSettings.AssetImportData.Object.File Path\" "
+StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[3]\" \"Object.ImportSettings.AssetImportData\" \"Object.ImportSettings.AssetImportData.Object.File Path\" "
 BP_Heart_C=
 StaticMeshActor=
 REINST_BP_Heart_C_514="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 StaticMeshComponent=
-BoxComponent=
+BoxComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
@@ -2051,9 +2093,20 @@ BP_Ride_RandomSpawnerVolume_C="\"Object.Default.ActorList\" "
 BP_ScareObjectSprite1Obje_C="\"Object.Sprite.RenderComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 REINST_BP_ScareObjectSprite1Obje_C_532="\"Object.Sprite.RenderComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 MaterialExpressionConstant4Vector="\"Object.Constant\" "
+Bowling_C=
+BP__BottlesRandomSpawner_C=
 
 [PlacementMode]
+RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Game/FBX_Models/Maze/WhiskeyBottle/WhiskeybottleV1.WhiskeybottleV1;
+RecentlyPlaced=/Game/Blueprints/Maze/BP__BottlesRandomSpawner.BP__BottlesRandomSpawner;
 RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
+RecentlyPlaced=/Game/Blueprints/Bowling/BP_BallSpawner.BP_BallSpawner;
+RecentlyPlaced=/Game/FBX_Models/Bowling/FearHead/FearBall_StaticMesh.FearBall_StaticMesh;
+RecentlyPlaced=/Game/FBX_Models/Bowling/FearHead/Head_FearV1ReSetPivot_severedhead_fearv1Mesh.Head_FearV1ReSetPivot_severedhead_fearv1Mesh;
+RecentlyPlaced=/Game/FBX_Models/Bowling/FearHead/Head_FearV1ReSetPivot_low-polyMesh.Head_FearV1ReSetPivot_low-polyMesh;
+RecentlyPlaced=/Game/FBX_Models/Bowling/FearHead/Head_FearV1ReSetPivot_eyebrow009Mesh.Head_FearV1ReSetPivot_eyebrow009Mesh;
+RecentlyPlaced=/Game/FBX_Models/Bowling/FearHead/Head_FearV1ReSetPivot_teeth_baseMesh.Head_FearV1ReSetPivot_teeth_baseMesh;
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Materials/Bowling/AngryBall/Flat_AngryBall_Hair__Mat.Flat_AngryBall_Hair__Mat;
@@ -2064,15 +2117,6 @@ RecentlyPlaced=/Game/FBX_Models/Bowling/AngryHead/HeadAngryV1ReSetPivot_severedh
 RecentlyPlaced=/Game/FBX_Models/Bowling/AngryHead/HeadAngryV1ReSetPivot_high-polyMesh.HeadAngryV1ReSetPivot_high-polyMesh;
 RecentlyPlaced=/Game/FBX_Models/Bowling/AngryHead/HeadAngryV1ReSetPivot_eyebrow008Mesh.HeadAngryV1ReSetPivot_eyebrow008Mesh;
 RecentlyPlaced=/Game/FBX_Models/Bowling/AngryHead/HeadAngryV1ReSetPivot_teeth_shape02Mesh.HeadAngryV1ReSetPivot_teeth_shape02Mesh;
-RecentlyPlaced=/Game/FBX_Models/Bowling/AngryHead/AngryHeadMaterials/Old/middleage_lightskinned_male_diffuse2_Mat.middleage_lightskinned_male_diffuse2_Mat;
-RecentlyPlaced=/Game/FBX_Models/Bowling/AngryHead/StaticMesh.StaticMesh;
-RecentlyPlaced=/Game/FBX_Models/Bowling/AngryHead/HeadAngryV1ResetPivot.HeadAngryV1ResetPivot;
-RecentlyPlaced=/Game/FBX_Models/Bowling/AngryHead/Old/SeveredHeadAngryV1_severedhead_angryv1Mesh.SeveredHeadAngryV1_severedhead_angryv1Mesh;
-RecentlyPlaced=/Game/Blueprints/Bowling/BP_AngryBall.BP_AngryBall;
-RecentlyPlaced=/Game/Blueprints/Bowling/BP_HeadAngryV2.BP_HeadAngryV2;
-RecentlyPlaced=/Game/Materials/_GeneralUse/Cement_Speckle1/Flat_Cement_Speckle1_Mat.Flat_Cement_Speckle1_Mat;
-RecentlyPlaced=/Game/Blueprints/Bowling/BP_Head_AngryV2.BP_Head_AngryV2;
-RecentlyPlaced=/Game/FBX_Models/Maze/WhiskeyBottle/WhiskeybottleV1.WhiskeybottleV1;
 
 [MessageLog]
 LastLogListing=FBXImport
@@ -2100,7 +2144,7 @@ UNR=C:/Users/Matt/Desktop/CIU_Final_CarnEvil_4.19.2/CIU_CarnEvil_Final/Content/_
 BRUSH=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 FBX=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 FBXAnim=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
-GenericImport=C:/Users/Matt/Desktop/AngryBall_Mat/Angryteeth/Angryteeth_AmbientOcclusionMap.png
+GenericImport=C:/Users/Matt/Desktop/FearBall_Maps/Skin/FearBall_AmbientOcclusionMap.png
 GenericExport=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 GenericOpen=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 GenericSave=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
@@ -2734,11 +2778,13 @@ bImportTextures=False
 PostProcessVolume=PostProcessVolume.Lens.Lens,
 SphereComponent=SphereComponent.Collision.Collision,
 K2Node_CustomEvent=
-ArrayProperty=
+ArrayProperty=ArrayProperty.DefaultValueCategory.None,
 VR_Menu_C=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 K2Node_VariableGet=
 BP_RandomSpawnerVolume_C=ArrayProperty.DefaultValueCategory.None,
 StaticMesh=StaticMesh.LOD0.MeshBuildSettings,
+Bowling_C=ArrayProperty.DefaultValueCategory.None,
+BP__BottlesRandomSpawner_C=ArrayProperty.DefaultValueCategory.None,
 
 [FBX_Import_UI_Option_FbxStaticMeshImportData]
 StaticMeshLODGroup=None
@@ -2953,6 +2999,15 @@ bConvertSceneUnit=False
 /Game/Materials/Bowling/AngryBall/Flat_AngryBall_Hair__Mat.Flat_AngryBall_Hair__Mat=0
 /Game/Materials/Bowling/AngryBall/Flat_AngryBall_Eyes__Mat.Flat_AngryBall_Eyes__Mat=0
 /Game/Materials/Bowling/AngryBall/Flat_AngryBall_Teeth__Mat.Flat_AngryBall_Teeth__Mat=0
+/Game/FBX_Models/Bowling/FearHead/Head_FearV1ReSetPivot_eyebrow009Mesh.Head_FearV1ReSetPivot_eyebrow009Mesh=0
+/Game/FBX_Models/Bowling/FearHead/Head_FearV1ReSetPivot_low-polyMesh.Head_FearV1ReSetPivot_low-polyMesh=0
+/Game/FBX_Models/Bowling/FearHead/Head_FearV1ReSetPivot_severedhead_fearv1Mesh.Head_FearV1ReSetPivot_severedhead_fearv1Mesh=0
+/Game/FBX_Models/Bowling/FearHead/FearBall_StaticMesh.FearBall_StaticMesh=0
+/Game/Materials/Bowling/FearBall/Flat_FearBall_Eyebrows__Mat.Flat_FearBall_Eyebrows__Mat=0
+/Game/Blueprints/Menu/BP_Menu_RandomSpawnerVolume.BP_Menu_RandomSpawnerVolume=0
+/Game/Blueprints/Maze/BP_WhiskeybottleV1.BP_WhiskeybottleV1=0
+/Game/FBX_Models/Maze/WhiskeyBottle/WhiskeybottleV1.WhiskeybottleV1=0
+/Game/Blueprints/Maze/BP__BottlesRandomSpawner.BP__BottlesRandomSpawner=0
 
 [MaterialEditor]
 PrimType=1
