--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -74,16 +74,16 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 CurrentScalingGridSize=6
 CurrentRotGridSize=6
 GridEnabled=False
-CurrentPosGridSize=4
+CurrentPosGridSize=1
 
 [MRU]
-MRUItem0=/Game/_Scenes/Maze
-MRUItem1=/Game/_Scenes/Bowling
-MRUItem2=/Game/_Scenes/VR_Menu
-MRUItem3=/Game/_Scenes/IntroScene
-MRUItem4=/Game/_Scenes/KnifeThrow
-MRUItem5=/Game/_Scenes/HeartBall
-MRUItem6=/Game/_Scenes/ClownBall
+MRUItem0=/Game/_Scenes/KnifeThrow
+MRUItem1=/Game/_Scenes/HeartBall
+MRUItem2=/Game/_Scenes/ClownBall
+MRUItem3=/Game/_Scenes/Bowling
+MRUItem4=/Game/_Scenes/Maze
+MRUItem5=/Game/_Scenes/VR_Menu
+MRUItem6=/Game/_Scenes/IntroScene
 MRUItem7=/Game/VirtualRealityBP/Maps/MotionControllerMap
 
 [LightingBuildOptions]
@@ -93,7 +93,7 @@ OnlyBuildVisibility=False
 UseErrorColoring=True
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/FBX_Models/Maze/WhiskeyBottle
+ContentBrowserTab1.SelectedPaths=/Game/_Scenes
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -119,7 +119,7 @@ GlobalAssetPicker.ThumbnailSizeScale=0.100000
 GlobalAssetPicker.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/_Scenes/Maze
+LastLevel=/Game/_Scenes/KnifeThrow
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -2045,6 +2045,46 @@ BP_WhiskeybottleV1_C.Variable=True
 BP_WhiskeybottleV1_C.Sockets=True
 BP_WhiskeybottleV1_C.ComponentReplication=True
 BP_WhiskeybottleV1_C.Events=True
+BP_BowlingScore_C.TransformCommon=True
+BP_BowlingScore_C.Rendering=True
+BP_BowlingScore_C.Input=True
+BP_BowlingScore_C.Actor=True
+BP_BowlingScore_C.Tick=True
+BP_BowlingScore_C.Replication=True
+BP_BowlingIngameScore_1_C.Tick=True
+BP_BowlingIngameScore_1_C.Rendering=True
+BP_BowlingIngameScore_1_C.Replication=True
+BP_BowlingIngameScore_1_C.Input=True
+BP_BowlingIngameScore_1_C.Actor=True
+BP_BowlingScore_C.Default=True
+BP_BallSpawner_C.Default=True
+BP_EyeBallSpawner_C.Tick=True
+BP_EyeBallSpawner_C.Default=True
+BP_EyeBallSpawner_C.Rendering=True
+BP_EyeBallSpawner_C.Replication=True
+BP_EyeBallSpawner_C.Input=True
+BP_EyeBallSpawner_C.Actor=True
+BP_EyeBallSpawner_C.TransformCommon=True
+BP_HeartBallSpawner_C.Tick=True
+BP_HeartBallSpawner_C.Default=True
+BP_HeartBallSpawner_C.Rendering=True
+BP_HeartBallSpawner_C.Replication=True
+BP_HeartBallSpawner_C.Input=True
+BP_HeartBallSpawner_C.Actor=True
+BP_HeartBallSpawner_C.TransformCommon=True
+BP_KnifeSpawner_C.TransformCommon=True
+BP_KnifeSpawner_C.Default=True
+BP_KnifeSpawner_C.Rendering=True
+BP_KnifeSpawner_C.Input=True
+BP_KnifeSpawner_C.Actor=True
+BP_KnifeSpawner_C.Tick=True
+BP_KnifeSpawner_C.Replication=True
+BP_AxeSpawner_C.TransformCommon=True
+BP_AxeSpawner_C.Rendering=False
+BP_AxeSpawner_C.Input=True
+BP_AxeSpawner_C.Actor=True
+BP_AxeSpawner_C.Tick=True
+BP_AxeSpawner_C.Replication=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2053,7 +2093,7 @@ Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.ColorSaturationShadows\" \"Object.PostProcessVolumeSettings.Settings.FilmWhitePoint\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[3]\" \"Object.ImportSettings.AssetImportData\" \"Object.ImportSettings.AssetImportData.Object.File Path\" "
+Object="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.ImportSettings.AssetImportData\" \"Object.ImportSettings.AssetImportData.Object.File Path\" "
 MaterialExpressionSceneColor="\"Object.ConstInput\" "
 MaterialExpression=
 WorldSettings="\"Object.Lightmass.LightmassSettings\" "
@@ -2065,7 +2105,7 @@ SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray
 ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 KillZVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PhysicsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[3]\" \"Object.ImportSettings.AssetImportData\" \"Object.ImportSettings.AssetImportData.Object.File Path\" "
+StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.ImportSettings.AssetImportData\" \"Object.ImportSettings.AssetImportData.Object.File Path\" "
 BP_Heart_C=
 StaticMeshActor=
 REINST_BP_Heart_C_514="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
@@ -2095,13 +2135,21 @@ REINST_BP_ScareObjectSprite1Obje_C_532="\"Object.Sprite.RenderComponent.Object.C
 MaterialExpressionConstant4Vector="\"Object.Constant\" "
 Bowling_C=
 BP__BottlesRandomSpawner_C=
+BP_BallSpawner_C=
+BP_EyeBallSpawner_C=
+BP_KnifeSpawner_C=
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/KnifeThrow/BP_AxeSpawner.BP_AxeSpawner;
+RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
+RecentlyPlaced=/Game/Blueprints/KnifeThrow/BP_KnifeSpawner.BP_KnifeSpawner;
+RecentlyPlaced=/Game/Blueprints/HeartBall/BP_HeartBallSpawner.BP_HeartBallSpawner;
+RecentlyPlaced=/Game/Blueprints/ClownBall/BP_EyeBallSpawner.BP_EyeBallSpawner;
+RecentlyPlaced=/Game/Blueprints/Bowling/BP_BowlingBallSpawner.BP_BowlingBallSpawner;
+RecentlyPlaced=/Game/Blueprints/Bowling/BP_BowlingScore.BP_BowlingScore;
 RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/FBX_Models/Maze/WhiskeyBottle/WhiskeybottleV1.WhiskeybottleV1;
 RecentlyPlaced=/Game/Blueprints/Maze/BP__BottlesRandomSpawner.BP__BottlesRandomSpawner;
-RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
-RecentlyPlaced=/Game/Blueprints/Bowling/BP_BallSpawner.BP_BallSpawner;
 RecentlyPlaced=/Game/FBX_Models/Bowling/FearHead/FearBall_StaticMesh.FearBall_StaticMesh;
 RecentlyPlaced=/Game/FBX_Models/Bowling/FearHead/Head_FearV1ReSetPivot_severedhead_fearv1Mesh.Head_FearV1ReSetPivot_severedhead_fearv1Mesh;
 RecentlyPlaced=/Game/FBX_Models/Bowling/FearHead/Head_FearV1ReSetPivot_low-polyMesh.Head_FearV1ReSetPivot_low-polyMesh;
@@ -2112,11 +2160,6 @@ RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasic
 RecentlyPlaced=/Game/Materials/Bowling/AngryBall/Flat_AngryBall_Hair__Mat.Flat_AngryBall_Hair__Mat;
 RecentlyPlaced=/Game/Materials/Bowling/AngryBall/Flat_AngryBall_Eyebrows__Mat.Flat_AngryBall_Eyebrows__Mat;
 RecentlyPlaced=/Game/FBX_Models/Bowling/AngryHead/AngryBall_StaticMesh.AngryBall_StaticMesh;
-RecentlyPlaced=/Game/FBX_Models/Bowling/AngryHead/HeadAngryV1ReSetPivot_short04Mesh.HeadAngryV1ReSetPivot_short04Mesh;
-RecentlyPlaced=/Game/FBX_Models/Bowling/AngryHead/HeadAngryV1ReSetPivot_severedhead_angryv1Mesh.HeadAngryV1ReSetPivot_severedhead_angryv1Mesh;
-RecentlyPlaced=/Game/FBX_Models/Bowling/AngryHead/HeadAngryV1ReSetPivot_high-polyMesh.HeadAngryV1ReSetPivot_high-polyMesh;
-RecentlyPlaced=/Game/FBX_Models/Bowling/AngryHead/HeadAngryV1ReSetPivot_eyebrow008Mesh.HeadAngryV1ReSetPivot_eyebrow008Mesh;
-RecentlyPlaced=/Game/FBX_Models/Bowling/AngryHead/HeadAngryV1ReSetPivot_teeth_shape02Mesh.HeadAngryV1ReSetPivot_teeth_shape02Mesh;
 
 [MessageLog]
 LastLogListing=FBXImport
@@ -2785,6 +2828,8 @@ BP_RandomSpawnerVolume_C=ArrayProperty.DefaultValueCategory.None,
 StaticMesh=StaticMesh.LOD0.MeshBuildSettings,
 Bowling_C=ArrayProperty.DefaultValueCategory.None,
 BP__BottlesRandomSpawner_C=ArrayProperty.DefaultValueCategory.None,
+BP_BallSpawner_C=ArrayProperty.DefaultValueCategory.None,
+BP_KnifeSpawner_C=
 
 [FBX_Import_UI_Option_FbxStaticMeshImportData]
 StaticMeshLODGroup=None
@@ -3008,6 +3053,21 @@ bConvertSceneUnit=False
 /Game/Blueprints/Maze/BP_WhiskeybottleV1.BP_WhiskeybottleV1=0
 /Game/FBX_Models/Maze/WhiskeyBottle/WhiskeybottleV1.WhiskeybottleV1=0
 /Game/Blueprints/Maze/BP__BottlesRandomSpawner.BP__BottlesRandomSpawner=0
+/Game/Blueprints/Bowling/BP_BowlingScore.BP_BowlingScore=0
+/Game/Blueprints/Bowling/BP_BowlingIngameScore_1.BP_BowlingIngameScore_1=0
+/Game/Blueprints/Bowling/BP_BowlingBallSpawner.BP_BowlingBallSpawner=0
+/Game/Blueprints/GameInstance/BP_GameInstance.BP_GameInstance=0
+/Game/Blueprints/ClownBall/BP_EyeBallSpawner.BP_EyeBallSpawner=0
+/Game/Blueprints/HeartBall/BP_HeartBallSpawner.BP_HeartBallSpawner=0
+/Game/Blueprints/KnifeThrow/BP_KnifeSpawner.BP_KnifeSpawner=0
+/Game/Blueprints/KnifeThrow/BP_AxeSpawner.BP_AxeSpawner=0
+/Game/FBX_Models/KnifeThrow/Female_BodyParts/FemaleTargetHeadV1_Body.FemaleTargetHeadV1_Body=1
+/Game/FBX_Models/KnifeThrow/Female_BodyParts/FemaleTargetHeadV1_Eyelashes.FemaleTargetHeadV1_Eyelashes=1
+/Game/FBX_Models/KnifeThrow/Female_BodyParts/FemaleTargetHeadV1_Hair.FemaleTargetHeadV1_Hair=1
+/Game/FBX_Models/KnifeThrow/Female_BodyParts/FemaleTargetLeftArmV1_Body.FemaleTargetLeftArmV1_Body=1
+/Game/FBX_Models/KnifeThrow/Female_BodyParts/FemaleTargetLeftLeg1_Body.FemaleTargetLeftLeg1_Body=1
+/Game/FBX_Models/KnifeThrow/Female_BodyParts/FemaleTargetRightArmV1_Body.FemaleTargetRightArmV1_Body=1
+/Game/FBX_Models/KnifeThrow/Female_BodyParts/FemaleTargetRightLeg1_Body.FemaleTargetRightLeg1_Body=1
 
 [MaterialEditor]
 PrimType=1
